Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -257,14 +257,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-11T23:54:55.677Z"
+     "end_time": "2019-05-11T23:55:07.446936Z",
+     "start_time": "2019-05-11T23:55:01.373486Z"
     },
     "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 64, 32, 32]           1,728\n",
+      "            Conv2d-2           [-1, 64, 32, 32]          36,864\n",
+      "            Conv2d-3           [-1, 64, 16, 16]          36,864\n",
+      "            Conv2d-4          [-1, 128, 16, 16]          73,728\n",
+      "            Conv2d-5          [-1, 128, 16, 16]         147,456\n",
+      "            Conv2d-6            [-1, 128, 8, 8]         147,456\n",
+      "            Conv2d-7            [-1, 128, 8, 8]         147,456\n",
+      "            Conv2d-8            [-1, 128, 8, 8]          16,384\n",
+      "            Conv2d-9             [-1, 10, 8, 8]           1,280\n",
+      "================================================================\n",
+      "Total params: 609,216\n",
+      "Trainable params: 609,216\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.01\n",
+      "Forward/backward pass size (MB): 1.82\n",
+      "Params size (MB): 2.32\n",
+      "Estimated Total Size (MB): 4.15\n",
+      "----------------------------------------------------------------\n",
+      "Cuda:  True\n"
+     ]
+    }
+   ],
    "source": [
     "# load model with some batch size\n",
     "batch_size = 128 ; learning_rate = 0.0008\n",
@@ -290,7 +321,23 @@
      3
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 layer torch.Size([64, 3, 3, 3])\n",
+      "2 layer torch.Size([64, 64, 3, 3])\n",
+      "3 layer torch.Size([64, 64, 3, 3])\n",
+      "4 layer torch.Size([128, 64, 3, 3])\n",
+      "5 layer torch.Size([128, 128, 3, 3])\n",
+      "6 layer torch.Size([128, 128, 3, 3])\n",
+      "7 layer torch.Size([128, 128, 3, 3])\n",
+      "8 layer torch.Size([128, 128, 1, 1])\n",
+      "9 layer torch.Size([10, 128, 1, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "#  Get the weights - after training\n",
     "def get_weights(net):            return [p.data for p in net.parameters()]\n",
@@ -333,7 +380,33 @@
      "start_time": "2019-05-11T23:54:55.685Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "Dataset CIFAR10\n",
+      "    Number of datapoints: 50000\n",
+      "    Split: train\n",
+      "    Root Location: .\n",
+      "    Transforms (if any): Compose(\n",
+      "                             ToTensor()\n",
+      "                             Normalize(mean=[0.4913725490196078, 0.4823529411764706, 0.4466666666666667], std=[0.24705882352941178, 0.24352941176470588, 0.2615686274509804])\n",
+      "                         )\n",
+      "    Target Transforms (if any): None Dataset CIFAR10\n",
+      "    Number of datapoints: 10000\n",
+      "    Split: test\n",
+      "    Root Location: .\n",
+      "    Transforms (if any): Compose(\n",
+      "                             ToTensor()\n",
+      "                             Normalize(mean=[0.4913725490196078, 0.4823529411764706, 0.4466666666666667], std=[0.24705882352941178, 0.24352941176470588, 0.2615686274509804])\n",
+      "                         )\n",
+      "    Target Transforms (if any): None\n"
+     ]
+    }
+   ],
    "source": [
     "# prepare the data set - here CIFAR\n",
     "normalize = transforms.Normalize(mean=[x/255.0 for x in [125.3, 123.0, 113.9]],std=[x/255.0 for x in [63.0, 62.1, 66.7]])\n",
@@ -366,7 +439,26 @@
     ],
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tEpoch: 0\tTrain loss: 1.865\tTrain Acc: 28.89655\n",
+      "\tEpoch: 0\tTest loss: 1.63\tTest Acc: 40.1757525\n",
+      "==========================\n",
+      "\tEpoch: 1\tTrain loss: 1.385\tTrain Acc: 49.32475\n",
+      "\tEpoch: 1\tTest loss: 1.2\tTest Acc: 56.43625125\n",
+      "==========================\n",
+      "\tEpoch: 2\tTrain loss: 1.107\tTrain Acc: 60.48475\n",
+      "\tEpoch: 2\tTest loss: 1.003\tTest Acc: 64.681875\n",
+      "==========================\n",
+      "\tEpoch: 3\tTrain loss: 0.945\tTrain Acc: 66.92475\n",
+      "\tEpoch: 3\tTest loss: 0.945\tTest Acc: 67.155625\n",
+      "==========================\n"
+     ]
+    }
+   ],
    "source": [
     "# train the network\n",
     "num_epoch   = 100\n",
