Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -516,7 +516,22 @@
       "\tEpoch: 23\tTrain loss: 0.211\tTrain Acc: 92.47225\n",
       "\tEpoch: 23\tTest loss: 1.006\tTest Acc: 77.315125\n",
       "==========================\n",
-      "\tEpoch: 24\tTrain loss: 0.184\tTrain Acc: 93.41675\n"
+      "\tEpoch: 24\tTrain loss: 0.184\tTrain Acc: 93.41675\n",
+      "\tEpoch: 24\tTest loss: 1.016\tTest Acc: 76.675255\n",
+      "==========================\n",
+      "\tEpoch: 25\tTrain loss: 0.174\tTrain Acc: 93.84125\n",
+      "\tEpoch: 25\tTest loss: 1.087\tTest Acc: 75.185125\n",
+      "==========================\n",
+      "\tEpoch: 26\tTrain loss: 0.159\tTrain Acc: 94.37625\n",
+      "\tEpoch: 26\tTest loss: 1.301\tTest Acc: 73.575875\n",
+      "==========================\n",
+      "\tEpoch: 27\tTrain loss: 0.151\tTrain Acc: 94.64375\n",
+      "\tEpoch: 27\tTest loss: 1.055\tTest Acc: 77.015255\n",
+      "==========================\n",
+      "\tEpoch: 28\tTrain loss: 0.144\tTrain Acc: 94.89455\n",
+      "\tEpoch: 28\tTest loss: 1.079\tTest Acc: 77.235255\n",
+      "==========================\n",
+      "Epoch: 29 i : 42 and loss: 0.118 acc: 0.9453125\r"
      ]
     }
    ],
