Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -455,7 +455,20 @@
       "==========================\n",
       "\tEpoch: 3\tTrain loss: 0.945\tTrain Acc: 66.92475\n",
       "\tEpoch: 3\tTest loss: 0.945\tTest Acc: 67.155625\n",
-      "==========================\n"
+      "==========================\n",
+      "\tEpoch: 4\tTrain loss: 0.829\tTrain Acc: 71.19275\n",
+      "\tEpoch: 4\tTest loss: 0.876\tTest Acc: 70.235875\n",
+      "==========================\n",
+      "\tEpoch: 5\tTrain loss: 0.732\tTrain Acc: 74.64675\n",
+      "\tEpoch: 5\tTest loss: 0.852\tTest Acc: 71.327555\n",
+      "==========================\n",
+      "\tEpoch: 6\tTrain loss: 0.657\tTrain Acc: 77.45375\n",
+      "\tEpoch: 6\tTest loss: 0.793\tTest Acc: 73.465625\n",
+      "==========================\n",
+      "\tEpoch: 7\tTrain loss: 0.595\tTrain Acc: 79.71225\n",
+      "\tEpoch: 7\tTest loss: 0.762\tTest Acc: 74.936255\n",
+      "==========================\n",
+      "\tEpoch: 8\tTrain loss: 0.544\tTrain Acc: 81.19125\n"
      ]
     }
    ],
