Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -531,7 +531,19 @@
       "\tEpoch: 28\tTrain loss: 0.144\tTrain Acc: 94.89455\n",
       "\tEpoch: 28\tTest loss: 1.079\tTest Acc: 77.235255\n",
       "==========================\n",
-      "Epoch: 29 i : 42 and loss: 0.118 acc: 0.9453125\r"
+      "\tEpoch: 29\tTrain loss: 0.135\tTrain Acc: 95.19875\n",
+      "\tEpoch: 29\tTest loss: 1.127\tTest Acc: 76.080625\n",
+      "==========================\n",
+      "\tEpoch: 30\tTrain loss: 0.13\tTrain Acc: 95.312525\n",
+      "\tEpoch: 30\tTest loss: 1.364\tTest Acc: 73.575875\n",
+      "==========================\n",
+      "\tEpoch: 31\tTrain loss: 0.119\tTrain Acc: 95.72625\n",
+      "\tEpoch: 31\tTest loss: 1.232\tTest Acc: 76.568755\n",
+      "==========================\n",
+      "\tEpoch: 32\tTrain loss: 0.101\tTrain Acc: 96.35225\n",
+      "\tEpoch: 32\tTest loss: 1.375\tTest Acc: 75.223755\n",
+      "==========================\n",
+      "\tEpoch: 33\tTrain loss: 0.104\tTrain Acc: 96.38825\n"
      ]
     }
    ],
