Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -468,7 +468,22 @@
       "\tEpoch: 7\tTrain loss: 0.595\tTrain Acc: 79.71225\n",
       "\tEpoch: 7\tTest loss: 0.762\tTest Acc: 74.936255\n",
       "==========================\n",
-      "\tEpoch: 8\tTrain loss: 0.544\tTrain Acc: 81.19125\n"
+      "\tEpoch: 8\tTrain loss: 0.544\tTrain Acc: 81.19125\n",
+      "\tEpoch: 8\tTest loss: 0.781\tTest Acc: 75.086255\n",
+      "==========================\n",
+      "\tEpoch: 9\tTrain loss: 0.493\tTrain Acc: 83.20475\n",
+      "\tEpoch: 9\tTest loss: 0.811\tTest Acc: 75.210625\n",
+      "==========================\n",
+      "\tEpoch: 10\tTrain loss: 0.457\tTrain Acc: 84.04625\n",
+      "\tEpoch: 10\tTest loss: 0.741\tTest Acc: 77.516875\n",
+      "==========================\n",
+      "\tEpoch: 11\tTrain loss: 0.426\tTrain Acc: 85.17455\n",
+      "\tEpoch: 11\tTest loss: 0.737\tTest Acc: 78.315875\n",
+      "==========================\n",
+      "\tEpoch: 12\tTrain loss: 0.405\tTrain Acc: 85.83675\n",
+      "\tEpoch: 12\tTest loss: 0.751\tTest Acc: 77.326255\n",
+      "==========================\n",
+      "Epoch: 13 i : 125 and loss: 0.351 acc: 0.8515625\r"
      ]
     }
    ],
