Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -543,7 +543,22 @@
       "\tEpoch: 32\tTrain loss: 0.101\tTrain Acc: 96.35225\n",
       "\tEpoch: 32\tTest loss: 1.375\tTest Acc: 75.223755\n",
       "==========================\n",
-      "\tEpoch: 33\tTrain loss: 0.104\tTrain Acc: 96.38825\n"
+      "\tEpoch: 33\tTrain loss: 0.104\tTrain Acc: 96.38825\n",
+      "\tEpoch: 33\tTest loss: 1.321\tTest Acc: 76.549375\n",
+      "==========================\n",
+      "\tEpoch: 34\tTrain loss: 0.097\tTrain Acc: 96.57225\n",
+      "\tEpoch: 34\tTest loss: 1.2\tTest Acc: 77.94875755\n",
+      "==========================\n",
+      "\tEpoch: 35\tTrain loss: 0.099\tTrain Acc: 96.60225\n",
+      "\tEpoch: 35\tTest loss: 1.359\tTest Acc: 76.685255\n",
+      "==========================\n",
+      "\tEpoch: 36\tTrain loss: 0.087\tTrain Acc: 96.95255\n",
+      "\tEpoch: 36\tTest loss: 1.21\tTest Acc: 77.0857555\n",
+      "==========================\n",
+      "\tEpoch: 37\tTrain loss: 0.076\tTrain Acc: 97.40455\n",
+      "\tEpoch: 37\tTest loss: 1.28\tTest Acc: 74.6375755\n",
+      "==========================\n",
+      "Epoch: 38 i : 125 and loss: 0.033 acc: 0.9843755\r"
      ]
     }
    ],
