Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -483,7 +483,19 @@
       "\tEpoch: 12\tTrain loss: 0.405\tTrain Acc: 85.83675\n",
       "\tEpoch: 12\tTest loss: 0.751\tTest Acc: 77.326255\n",
       "==========================\n",
-      "Epoch: 13 i : 125 and loss: 0.351 acc: 0.8515625\r"
+      "\tEpoch: 13\tTrain loss: 0.365\tTrain Acc: 87.19855\n",
+      "\tEpoch: 13\tTest loss: 0.774\tTest Acc: 77.575875\n",
+      "==========================\n",
+      "\tEpoch: 14\tTrain loss: 0.334\tTrain Acc: 88.11225\n",
+      "\tEpoch: 14\tTest loss: 0.794\tTest Acc: 77.035525\n",
+      "==========================\n",
+      "\tEpoch: 15\tTrain loss: 0.323\tTrain Acc: 88.51475\n",
+      "\tEpoch: 15\tTest loss: 0.83\tTest Acc: 76.0875125\n",
+      "==========================\n",
+      "\tEpoch: 16\tTrain loss: 0.304\tTrain Acc: 89.43255\n",
+      "\tEpoch: 16\tTest loss: 0.922\tTest Acc: 75.455625\n",
+      "==========================\n",
+      "\tEpoch: 17\tTrain loss: 0.283\tTrain Acc: 89.88275\n"
      ]
     }
    ],
