Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -558,7 +558,19 @@
       "\tEpoch: 37\tTrain loss: 0.076\tTrain Acc: 97.40455\n",
       "\tEpoch: 37\tTest loss: 1.28\tTest Acc: 74.6375755\n",
       "==========================\n",
-      "Epoch: 38 i : 125 and loss: 0.033 acc: 0.9843755\r"
+      "\tEpoch: 38\tTrain loss: 0.068\tTrain Acc: 97.67625\n",
+      "\tEpoch: 38\tTest loss: 1.208\tTest Acc: 78.023125\n",
+      "==========================\n",
+      "\tEpoch: 39\tTrain loss: 0.067\tTrain Acc: 97.70825\n",
+      "\tEpoch: 39\tTest loss: 1.4\tTest Acc: 75.19125375\n",
+      "==========================\n",
+      "\tEpoch: 40\tTrain loss: 0.062\tTrain Acc: 97.86625\n",
+      "\tEpoch: 40\tTest loss: 1.335\tTest Acc: 75.945555\n",
+      "==========================\n",
+      "\tEpoch: 41\tTrain loss: 0.052\tTrain Acc: 98.27475\n",
+      "\tEpoch: 41\tTest loss: 1.46\tTest Acc: 78.0562555\n",
+      "==========================\n",
+      "\tEpoch: 42\tTrain loss: 0.055\tTrain Acc: 98.14755\n"
      ]
     }
    ],
