Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -111,6 +111,19 @@
     "\n",
     "    def forward(self, x):\n",
     "        \n",
+    "#         conv1_out = F.relu(self.conv1(x))\n",
+    "#         conv2_out = F.relu(self.conv2(conv1_out))\n",
+    "#         conv3_out = F.relu(self.conv3(conv2_out))\n",
+    "        \n",
+    "#         conv4_out = F.relu(self.conv4(conv3_out))\n",
+    "#         conv5_out = F.relu(self.conv5(conv4_out))\n",
+    "#         conv6_out = F.relu(self.conv6(conv5_out))\n",
+    "        \n",
+    "#         conv7_out = F.relu(self.conv7(conv6_out))\n",
+    "#         conv8_out = F.relu(self.conv8(conv7_out))\n",
+    "#         class_out = F.relu(self.class_conv(conv8_out))\n",
+    "#         pool_out  = F.adaptive_avg_pool2d(class_out, 1)\n",
+    "        \n",
     "        conv1_out = F.relu(self.conv1(x))\n",
     "        conv2_out = F.relu(self.conv2(conv1_out))\n",
     "        conv3_out = F.relu(self.conv3(conv2_out))\n",
@@ -428,10 +441,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-11T23:44:40.809Z"
+     "end_time": "2019-05-12T00:04:14.035400Z",
+     "start_time": "2019-05-11T23:44:40.811083Z"
     },
     "code_folding": [
      6,
@@ -570,7 +584,24 @@
       "\tEpoch: 41\tTrain loss: 0.052\tTrain Acc: 98.27475\n",
       "\tEpoch: 41\tTest loss: 1.46\tTest Acc: 78.0562555\n",
       "==========================\n",
-      "\tEpoch: 42\tTrain loss: 0.055\tTrain Acc: 98.14755\n"
+      "\tEpoch: 42\tTrain loss: 0.055\tTrain Acc: 98.14755\n",
+      "\tEpoch: 42\tTest loss: 1.293\tTest Acc: 78.665525\n",
+      "==========================\n",
+      "\tEpoch: 43\tTrain loss: 0.056\tTrain Acc: 98.16675\n",
+      "\tEpoch: 43\tTest loss: 1.441\tTest Acc: 77.485255\n",
+      "==========================\n",
+      "Epoch: 44 i : 21 and loss: 0.079 acc: 0.9843755\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-2f566071f15f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[0mtotal_loss_train\u001b[0m   \u001b[1;33m=\u001b[0m \u001b[0mtotal_loss_train\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m         \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredicted\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[0mcorrect_train\u001b[0m      \u001b[1;33m=\u001b[0m \u001b[0mcorrect_train\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mpredicted\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meq\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtargets\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[1;31m# update\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -633,6 +664,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:04:14.041385Z",
      "start_time": "2019-05-11T23:44:43.269Z"
     }
    },
