Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -495,7 +495,24 @@
       "\tEpoch: 16\tTrain loss: 0.304\tTrain Acc: 89.43255\n",
       "\tEpoch: 16\tTest loss: 0.922\tTest Acc: 75.455625\n",
       "==========================\n",
-      "\tEpoch: 17\tTrain loss: 0.283\tTrain Acc: 89.88275\n"
+      "\tEpoch: 17\tTrain loss: 0.283\tTrain Acc: 89.88275\n",
+      "\tEpoch: 17\tTest loss: 0.931\tTest Acc: 76.395255\n",
+      "==========================\n",
+      "\tEpoch: 18\tTrain loss: 0.274\tTrain Acc: 90.40655\n",
+      "\tEpoch: 18\tTest loss: 0.828\tTest Acc: 78.555555\n",
+      "==========================\n",
+      "\tEpoch: 19\tTrain loss: 0.243\tTrain Acc: 91.27455\n",
+      "\tEpoch: 19\tTest loss: 0.841\tTest Acc: 77.623125\n",
+      "==========================\n",
+      "\tEpoch: 20\tTrain loss: 0.231\tTrain Acc: 91.87475\n",
+      "\tEpoch: 20\tTest loss: 0.892\tTest Acc: 75.785255\n",
+      "==========================\n",
+      "\tEpoch: 21\tTrain loss: 0.215\tTrain Acc: 92.39855\n",
+      "\tEpoch: 21\tTest loss: 0.925\tTest Acc: 75.285375\n",
+      "==========================\n",
+      "\tEpoch: 22\tTrain loss: 0.206\tTrain Acc: 92.89255\n",
+      "\tEpoch: 22\tTest loss: 0.89\tTest Acc: 76.6325125\n",
+      "==========================\n"
      ]
     }
    ],
