Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -512,6 +512,21 @@
       "==========================\n",
       "\tEpoch: 22\tTrain loss: 0.206\tTrain Acc: 92.89255\n",
       "\tEpoch: 22\tTest loss: 0.89\tTest Acc: 76.6325125\n",
+      "==========================\n",
+      "\tEpoch: 23\tTrain loss: 0.188\tTrain Acc: 93.34625\n",
+      "\tEpoch: 23\tTest loss: 1.044\tTest Acc: 76.161875\n",
+      "==========================\n",
+      "\tEpoch: 24\tTrain loss: 0.187\tTrain Acc: 93.50225\n",
+      "\tEpoch: 24\tTest loss: 0.962\tTest Acc: 77.225255\n",
+      "==========================\n",
+      "\tEpoch: 25\tTrain loss: 0.166\tTrain Acc: 94.19375\n",
+      "\tEpoch: 25\tTest loss: 1.001\tTest Acc: 77.872525\n",
+      "==========================\n",
+      "\tEpoch: 26\tTrain loss: 0.157\tTrain Acc: 94.52825\n",
+      "\tEpoch: 26\tTest loss: 1.043\tTest Acc: 76.947575\n",
+      "==========================\n",
+      "\tEpoch: 27\tTrain loss: 0.148\tTrain Acc: 94.90825\n",
+      "\tEpoch: 27\tTest loss: 1.299\tTest Acc: 73.665625\n",
       "==========================\n"
      ]
     }
