Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -457,7 +457,20 @@
      "text": [
       "\tEpoch: 0\tTrain loss: 1.844\tTrain Acc: 29.87625\n",
       "\tEpoch: 0\tTest loss: 1.665\tTest Acc: 37.099375\n",
-      "==========================\n"
+      "==========================\n",
+      "\tEpoch: 1\tTrain loss: 1.468\tTrain Acc: 46.15455\n",
+      "\tEpoch: 1\tTest loss: 1.319\tTest Acc: 52.346875\n",
+      "==========================\n",
+      "\tEpoch: 2\tTrain loss: 1.213\tTrain Acc: 56.64675\n",
+      "\tEpoch: 2\tTest loss: 1.128\tTest Acc: 60.612555\n",
+      "==========================\n",
+      "\tEpoch: 3\tTrain loss: 1.035\tTrain Acc: 63.55875\n",
+      "\tEpoch: 3\tTest loss: 0.995\tTest Acc: 65.546255\n",
+      "==========================\n",
+      "\tEpoch: 4\tTrain loss: 0.919\tTrain Acc: 67.87825\n",
+      "\tEpoch: 4\tTest loss: 0.898\tTest Acc: 68.733125\n",
+      "==========================\n",
+      "\tEpoch: 5\tTrain loss: 0.824\tTrain Acc: 71.27875\n"
      ]
     }
    ],
