Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -527,7 +527,21 @@
       "==========================\n",
       "\tEpoch: 27\tTrain loss: 0.148\tTrain Acc: 94.90825\n",
       "\tEpoch: 27\tTest loss: 1.299\tTest Acc: 73.665625\n",
-      "==========================\n"
+      "==========================\n",
+      "\tEpoch: 28\tTrain loss: 0.148\tTrain Acc: 94.87225\n",
+      "\tEpoch: 28\tTest loss: 1.092\tTest Acc: 77.940625\n",
+      "==========================\n",
+      "\tEpoch: 29\tTrain loss: 0.137\tTrain Acc: 95.34475\n",
+      "\tEpoch: 29\tTest loss: 1.22\tTest Acc: 76.6534375\n",
+      "==========================\n",
+      "\tEpoch: 30\tTrain loss: 0.132\tTrain Acc: 95.48625\n",
+      "\tEpoch: 30\tTest loss: 1.073\tTest Acc: 78.413125\n",
+      "==========================\n",
+      "\tEpoch: 31\tTrain loss: 0.126\tTrain Acc: 95.71655\n",
+      "\tEpoch: 31\tTest loss: 1.142\tTest Acc: 77.713125\n",
+      "==========================\n",
+      "\tEpoch: 32\tTrain loss: 0.125\tTrain Acc: 95.80225\n",
+      "Epoch: 32 i : 75 and loss: 1.249 acc: 0.7890625\r"
      ]
     }
    ],
