--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -470,7 +470,22 @@
       "\tEpoch: 4\tTrain loss: 0.919\tTrain Acc: 67.87825\n",
       "\tEpoch: 4\tTest loss: 0.898\tTest Acc: 68.733125\n",
       "==========================\n",
-      "\tEpoch: 5\tTrain loss: 0.824\tTrain Acc: 71.27875\n"
+      "\tEpoch: 5\tTrain loss: 0.824\tTrain Acc: 71.27875\n",
+      "\tEpoch: 5\tTest loss: 0.85\tTest Acc: 70.3251255\n",
+      "==========================\n",
+      "\tEpoch: 6\tTrain loss: 0.747\tTrain Acc: 73.88625\n",
+      "\tEpoch: 6\tTest loss: 0.846\tTest Acc: 71.156255\n",
+      "==========================\n",
+      "\tEpoch: 7\tTrain loss: 0.689\tTrain Acc: 76.22255\n",
+      "\tEpoch: 7\tTest loss: 0.926\tTest Acc: 68.855255\n",
+      "==========================\n",
+      "\tEpoch: 8\tTrain loss: 0.639\tTrain Acc: 77.77625\n",
+      "\tEpoch: 8\tTest loss: 0.855\tTest Acc: 72.277525\n",
+      "==========================\n",
+      "\tEpoch: 9\tTrain loss: 0.59\tTrain Acc: 79.675625\n",
+      "\tEpoch: 9\tTest loss: 0.791\tTest Acc: 74.135875\n",
+      "==========================\n",
+      "Epoch: 10 i : 385 and loss: 0.495 acc: 0.8125875\r"
      ]
     }
    ],
