--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -124,15 +124,15 @@
     "#         class_out = F.relu(self.class_conv(conv8_out))\n",
     "#         pool_out  = F.adaptive_avg_pool2d(class_out, 1)\n",
     "        \n",
-    "        conv1_out = F.relu(self.conv1(x))\n",
+    "        conv1_out = F.elu(self.conv1(x))\n",
     "        conv2_out = self.conv2(conv1_out)\n",
     "        conv3_out = self.conv3(conv2_out)\n",
     "        \n",
-    "        conv4_out = F.relu(self.conv4(conv3_out))\n",
+    "        conv4_out = F.elu(self.conv4(conv3_out))\n",
     "        conv5_out = self.conv5(conv4_out)\n",
     "        conv6_out = self.conv6(conv5_out)\n",
     "        \n",
-    "        conv7_out = F.relu(self.conv7(conv6_out))\n",
+    "        conv7_out = F.elu(self.conv7(conv6_out))\n",
     "        conv8_out = self.conv8(conv7_out)\n",
     "        class_out = self.class_conv(conv8_out)\n",
     "        pool_out  = F.adaptive_avg_pool2d(class_out, 1)\n",
@@ -325,10 +325,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-12T00:05:00.796Z"
+     "end_time": "2019-05-12T00:05:10.543414Z",
+     "start_time": "2019-05-12T00:05:10.509505Z"
     },
     "code_folding": []
    },
@@ -385,10 +386,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-12T00:05:00.800Z"
+     "end_time": "2019-05-12T00:05:12.914600Z",
+     "start_time": "2019-05-12T00:05:10.545409Z"
     }
    },
    "outputs": [
@@ -439,10 +441,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-12T00:05:00.878Z"
+     "end_time": "2019-05-12T00:10:07.592253Z",
+     "start_time": "2019-05-12T00:05:12.917592Z"
     },
     "code_folding": [
      6,
@@ -485,7 +488,31 @@
       "\tEpoch: 9\tTrain loss: 0.59\tTrain Acc: 79.675625\n",
       "\tEpoch: 9\tTest loss: 0.791\tTest Acc: 74.135875\n",
       "==========================\n",
-      "Epoch: 10 i : 385 and loss: 0.495 acc: 0.8125875\r"
+      "\tEpoch: 10\tTrain loss: 0.547\tTrain Acc: 80.99755\n",
+      "\tEpoch: 10\tTest loss: 0.778\tTest Acc: 74.886255\n",
+      "==========================\n",
+      "\tEpoch: 11\tTrain loss: 0.512\tTrain Acc: 82.13255\n",
+      "\tEpoch: 11\tTest loss: 0.807\tTest Acc: 74.821875\n",
+      "==========================\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-2f566071f15f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_epoch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# loop over the dataset multiple times\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mcorrect_train\u001b[0m    \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mtotal_loss_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mtotal_train\u001b[0m      \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mbatch_idx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtargets\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrainloader\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[1;31m# modify the inputs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\u001b[0m in \u001b[0;36m__iter__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    191\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    192\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__iter__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 193\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_DataLoaderIter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    194\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    195\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__len__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, loader)\u001b[0m\n\u001b[0;32m    467\u001b[0m                 \u001b[1;31m#     before it starts, and __del__ tries to join but will get:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    468\u001b[0m                 \u001b[1;31m#     AssertionError: can only join a started process.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 469\u001b[1;33m                 \u001b[0mw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    470\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex_queues\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex_queue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    471\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mworkers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\multiprocessing\\process.py\u001b[0m in \u001b[0;36mstart\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    103\u001b[0m                \u001b[1;34m'daemonic processes are not allowed to have children'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m         \u001b[0m_cleanup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 105\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_popen\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_Popen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    106\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_sentinel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_popen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msentinel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    107\u001b[0m         \u001b[1;31m# Avoid a refcycle if the target function holds an indirect\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\multiprocessing\\context.py\u001b[0m in \u001b[0;36m_Popen\u001b[1;34m(process_obj)\u001b[0m\n\u001b[0;32m    221\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mstaticmethod\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    222\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_Popen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_obj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 223\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_default_context\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_context\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mProcess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_Popen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_obj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    224\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    225\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mDefaultContext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBaseContext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\multiprocessing\\context.py\u001b[0m in \u001b[0;36m_Popen\u001b[1;34m(process_obj)\u001b[0m\n\u001b[0;32m    320\u001b[0m         \u001b[1;32mdef\u001b[0m \u001b[0m_Popen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_obj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    321\u001b[0m             \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mpopen_spawn_win32\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPopen\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 322\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mPopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_obj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    323\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    324\u001b[0m     \u001b[1;32mclass\u001b[0m \u001b[0mSpawnContext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBaseContext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\multiprocessing\\popen_spawn_win32.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, process_obj)\u001b[0m\n\u001b[0;32m     63\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m                 \u001b[0mreduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprep_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mto_child\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m                 \u001b[0mreduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_obj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mto_child\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m             \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m                 \u001b[0mset_spawning_popen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\multiprocessing\\reduction.py\u001b[0m in \u001b[0;36mdump\u001b[1;34m(obj, file, protocol)\u001b[0m\n\u001b[0;32m     58\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprotocol\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m     \u001b[1;34m'''Replacement for pickle.dump() using ForkingPickler.'''\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 60\u001b[1;33m     \u001b[0mForkingPickler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprotocol\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m \u001b[1;31m#\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\multiprocessing\\queues.py\u001b[0m in \u001b[0;36m__getstate__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__getstate__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m         \u001b[0mcontext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0massert_spawning\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m         return (self._ignore_epipe, self._maxsize, self._reader, self._writer,\n\u001b[0;32m     60\u001b[0m                 self._rlock, self._wlock, self._sem, self._opid)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -548,6 +575,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.602226Z",
      "start_time": "2019-05-12T00:05:00.882Z"
     }
    },
@@ -621,6 +649,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.604220Z",
      "start_time": "2019-05-12T00:05:00.900Z"
     },
     "code_folding": [
@@ -703,6 +732,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.606215Z",
      "start_time": "2019-05-12T00:05:00.903Z"
     }
    },
@@ -727,6 +757,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.607213Z",
      "start_time": "2019-05-12T00:05:00.905Z"
     }
    },
@@ -749,6 +780,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.609206Z",
      "start_time": "2019-05-12T00:05:00.980Z"
     },
     "hidden": true
@@ -764,6 +796,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.610205Z",
      "start_time": "2019-05-12T00:05:00.983Z"
     },
     "hidden": true
@@ -779,6 +812,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.612199Z",
      "start_time": "2019-05-12T00:05:00.987Z"
     },
     "hidden": true
@@ -794,6 +828,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.614193Z",
      "start_time": "2019-05-12T00:05:00.989Z"
     },
     "hidden": true
@@ -816,6 +851,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.616189Z",
      "start_time": "2019-05-12T00:05:00.993Z"
     },
     "hidden": true
@@ -834,6 +870,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.618183Z",
      "start_time": "2019-05-12T00:05:00.996Z"
     },
     "hidden": true
@@ -857,6 +894,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.619180Z",
      "start_time": "2019-05-12T00:05:01.073Z"
     },
     "code_folding": [],
@@ -882,6 +920,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.621175Z",
      "start_time": "2019-05-12T00:05:01.077Z"
     },
     "hidden": true
@@ -896,6 +935,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.623169Z",
      "start_time": "2019-05-12T00:05:01.080Z"
     },
     "code_folding": [],
@@ -947,6 +987,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.624167Z",
      "start_time": "2019-05-12T00:05:01.084Z"
     },
     "hidden": true,
@@ -971,6 +1012,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.626161Z",
      "start_time": "2019-05-12T00:05:01.156Z"
     },
     "code_folding": [],
@@ -1029,6 +1071,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.628158Z",
      "start_time": "2019-05-12T00:05:01.159Z"
     },
     "hidden": true,
@@ -1044,6 +1087,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.629153Z",
      "start_time": "2019-05-12T00:05:01.162Z"
     },
     "code_folding": [],
@@ -1095,6 +1139,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.631148Z",
      "start_time": "2019-05-12T00:05:01.167Z"
     },
     "hidden": true
@@ -1116,6 +1161,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.633143Z",
      "start_time": "2019-05-12T00:05:01.246Z"
     },
     "code_folding": [
@@ -1180,6 +1226,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.635138Z",
      "start_time": "2019-05-12T00:05:01.251Z"
     }
    },
@@ -1193,6 +1240,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.637131Z",
      "start_time": "2019-05-12T00:05:01.255Z"
     },
     "scrolled": true
@@ -1243,6 +1291,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.638129Z",
      "start_time": "2019-05-12T00:05:01.259Z"
     }
    },
@@ -1263,6 +1312,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.640124Z",
      "start_time": "2019-05-12T00:05:01.339Z"
     },
     "code_folding": []
@@ -1316,6 +1366,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.641120Z",
      "start_time": "2019-05-12T00:05:01.343Z"
     }
    },
@@ -1329,6 +1380,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.643116Z",
      "start_time": "2019-05-12T00:05:01.346Z"
     },
     "scrolled": true
@@ -1379,6 +1431,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.646108Z",
      "start_time": "2019-05-12T00:05:01.351Z"
     }
    },
@@ -1392,6 +1445,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:10:07.647106Z",
      "start_time": "2019-05-12T00:05:01.355Z"
     }
    },
