Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -541,7 +541,23 @@
       "\tEpoch: 31\tTest loss: 1.142\tTest Acc: 77.713125\n",
       "==========================\n",
       "\tEpoch: 32\tTrain loss: 0.125\tTrain Acc: 95.80225\n",
-      "Epoch: 32 i : 75 and loss: 1.249 acc: 0.7890625\r"
+      "\tEpoch: 32\tTest loss: 1.136\tTest Acc: 78.626875\n",
+      "==========================\n",
+      "\tEpoch: 33\tTrain loss: 0.12\tTrain Acc: 95.952575\n",
+      "\tEpoch: 33\tTest loss: 1.243\tTest Acc: 78.154375\n",
+      "==========================\n",
+      "\tEpoch: 34\tTrain loss: 0.116\tTrain Acc: 96.08555\n",
+      "\tEpoch: 34\tTest loss: 1.246\tTest Acc: 78.020625\n",
+      "==========================\n",
+      "\tEpoch: 35\tTrain loss: 0.106\tTrain Acc: 96.36455\n",
+      "\tEpoch: 35\tTest loss: 1.226\tTest Acc: 78.545575\n",
+      "==========================\n",
+      "\tEpoch: 36\tTrain loss: 0.108\tTrain Acc: 96.42575\n",
+      "\tEpoch: 36\tTest loss: 1.275\tTest Acc: 77.654375\n",
+      "==========================\n",
+      "\tEpoch: 37\tTrain loss: 0.106\tTrain Acc: 96.46555\n",
+      "\tEpoch: 37\tTest loss: 1.323\tTest Acc: 78.311255\n",
+      "==========================\n"
      ]
     }
    ],
