Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -557,7 +557,20 @@
       "==========================\n",
       "\tEpoch: 37\tTrain loss: 0.106\tTrain Acc: 96.46555\n",
       "\tEpoch: 37\tTest loss: 1.323\tTest Acc: 78.311255\n",
-      "==========================\n"
+      "==========================\n",
+      "\tEpoch: 38\tTrain loss: 0.104\tTrain Acc: 96.60655\n",
+      "\tEpoch: 38\tTest loss: 1.388\tTest Acc: 76.835755\n",
+      "==========================\n",
+      "\tEpoch: 39\tTrain loss: 0.095\tTrain Acc: 96.87675\n",
+      "\tEpoch: 39\tTest loss: 1.372\tTest Acc: 78.516875\n",
+      "==========================\n",
+      "\tEpoch: 40\tTrain loss: 0.085\tTrain Acc: 97.19655\n",
+      "\tEpoch: 40\tTest loss: 1.27\tTest Acc: 78.3290625\n",
+      "==========================\n",
+      "\tEpoch: 41\tTrain loss: 0.098\tTrain Acc: 96.80475\n",
+      "\tEpoch: 41\tTest loss: 1.464\tTest Acc: 77.856875\n",
+      "==========================\n",
+      "Epoch: 42 i : 127 and loss: 0.197 acc: 0.9453125\r"
      ]
     }
    ],
