--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -126,7 +126,7 @@
     "        \n",
     "        conv1_out = F.elu(self.conv1(x))\n",
     "        conv2_out = self.conv2(conv1_out)\n",
-    "        conv3_out = self.conv3(conv2_out)\n",
+    "        conv3_out = F.elu(self.conv3(conv2_out)\n",
     "        \n",
     "        conv4_out = F.elu(self.conv4(conv3_out))\n",
     "        conv5_out = self.conv5(conv4_out)\n",
@@ -325,10 +325,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-12T00:10:20.976Z"
+     "end_time": "2019-05-12T00:10:32.778220Z",
+     "start_time": "2019-05-12T00:10:32.740321Z"
     },
     "code_folding": []
    },
@@ -385,10 +386,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-12T00:10:20.979Z"
+     "end_time": "2019-05-12T00:10:34.987316Z",
+     "start_time": "2019-05-12T00:10:32.780216Z"
     }
    },
    "outputs": [
@@ -439,10 +441,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-12T00:10:20.990Z"
+     "end_time": "2019-05-12T00:13:28.215017Z",
+     "start_time": "2019-05-12T00:10:34.989311Z"
     },
     "code_folding": [
      6,
@@ -461,7 +464,30 @@
       "\tEpoch: 1\tTrain loss: 1.423\tTrain Acc: 48.36425\n",
       "\tEpoch: 1\tTest loss: 1.188\tTest Acc: 57.485625\n",
       "==========================\n",
-      "Epoch: 2 i : 50 and loss: 1.115 acc: 0.5781255\r"
+      "\tEpoch: 2\tTrain loss: 1.125\tTrain Acc: 60.03625\n",
+      "\tEpoch: 2\tTest loss: 1.04\tTest Acc: 63.2993755\n",
+      "==========================\n",
+      "\tEpoch: 3\tTrain loss: 0.966\tTrain Acc: 66.20855\n",
+      "\tEpoch: 3\tTest loss: 0.933\tTest Acc: 67.453755\n",
+      "==========================\n",
+      "\tEpoch: 4\tTrain loss: 0.851\tTrain Acc: 70.43255\n",
+      "\tEpoch: 4\tTest loss: 0.885\tTest Acc: 69.340625\n",
+      "==========================\n",
+      "\tEpoch: 5\tTrain loss: 0.77\tTrain Acc: 73.324625\n",
+      "\tEpoch: 5\tTest loss: 0.828\tTest Acc: 71.513125\n",
+      "==========================\n",
+      "Epoch: 6 i : 82 and loss: 0.967 acc: 0.6953125\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-2f566071f15f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m         \u001b[1;31m# print\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m         \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Epoch: \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\" i : \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_idx\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\" and loss: \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\" acc: \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpredicted\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meq\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtargets\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"\\r\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m         \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m     \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\\tEpoch: \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"\\tTrain loss: \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtotal_loss_train\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mtotal_train\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"\\tTrain Acc: \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100.\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mcorrect_train\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mtotal_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"\\n\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -524,6 +550,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.230974Z",
      "start_time": "2019-05-12T00:10:20.992Z"
     }
    },
@@ -597,6 +624,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.231971Z",
      "start_time": "2019-05-12T00:10:21.004Z"
     },
     "code_folding": [
@@ -679,6 +707,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.233967Z",
      "start_time": "2019-05-12T00:10:21.008Z"
     }
    },
@@ -703,6 +732,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.235961Z",
      "start_time": "2019-05-12T00:10:21.011Z"
     }
    },
@@ -725,6 +755,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.237955Z",
      "start_time": "2019-05-12T00:10:21.025Z"
     },
     "hidden": true
@@ -740,6 +771,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.240948Z",
      "start_time": "2019-05-12T00:10:21.027Z"
     },
     "hidden": true
@@ -755,6 +787,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.242943Z",
      "start_time": "2019-05-12T00:10:21.030Z"
     },
     "hidden": true
@@ -770,6 +803,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.244937Z",
      "start_time": "2019-05-12T00:10:21.034Z"
     },
     "hidden": true
@@ -792,6 +826,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.246931Z",
      "start_time": "2019-05-12T00:10:21.037Z"
     },
     "hidden": true
@@ -810,6 +845,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.247928Z",
      "start_time": "2019-05-12T00:10:21.041Z"
     },
     "hidden": true
@@ -833,6 +869,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.248925Z",
      "start_time": "2019-05-12T00:10:21.052Z"
     },
     "code_folding": [],
@@ -858,6 +895,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.250921Z",
      "start_time": "2019-05-12T00:10:21.055Z"
     },
     "hidden": true
@@ -872,6 +910,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.252915Z",
      "start_time": "2019-05-12T00:10:21.058Z"
     },
     "code_folding": [],
@@ -923,6 +962,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.254911Z",
      "start_time": "2019-05-12T00:10:21.060Z"
     },
     "hidden": true,
@@ -947,6 +987,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.255909Z",
      "start_time": "2019-05-12T00:10:21.080Z"
     },
     "code_folding": [],
@@ -1005,6 +1046,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.257903Z",
      "start_time": "2019-05-12T00:10:21.082Z"
     },
     "hidden": true,
@@ -1020,6 +1062,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.260895Z",
      "start_time": "2019-05-12T00:10:21.084Z"
     },
     "code_folding": [],
@@ -1071,6 +1114,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.262889Z",
      "start_time": "2019-05-12T00:10:21.087Z"
     },
     "hidden": true
@@ -1092,6 +1136,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.264885Z",
      "start_time": "2019-05-12T00:10:21.099Z"
     },
     "code_folding": [
@@ -1156,6 +1201,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.265881Z",
      "start_time": "2019-05-12T00:10:21.101Z"
     }
    },
@@ -1169,6 +1215,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.267876Z",
      "start_time": "2019-05-12T00:10:21.104Z"
     },
     "scrolled": true
@@ -1219,6 +1266,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.269871Z",
      "start_time": "2019-05-12T00:10:21.108Z"
     }
    },
@@ -1239,6 +1287,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.270868Z",
      "start_time": "2019-05-12T00:10:21.121Z"
     },
     "code_folding": []
@@ -1292,6 +1341,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.273860Z",
      "start_time": "2019-05-12T00:10:21.125Z"
     }
    },
@@ -1305,6 +1355,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.277850Z",
      "start_time": "2019-05-12T00:10:21.128Z"
     },
     "scrolled": true
@@ -1355,6 +1406,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.279843Z",
      "start_time": "2019-05-12T00:10:21.131Z"
     }
    },
@@ -1368,6 +1420,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-05-12T00:13:28.281838Z",
      "start_time": "2019-05-12T00:10:21.133Z"
     }
    },
