Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -126,15 +126,15 @@
     "        \n",
     "        conv1_out = F.elu(self.conv1(x))\n",
     "        conv2_out = self.conv2(conv1_out)\n",
-    "        conv3_out = F.elu(self.conv3(conv2_out)\n",
+    "        conv3_out = F.elu(self.conv3(conv2_out))\n",
     "        \n",
-    "        conv4_out = F.elu(self.conv4(conv3_out))\n",
-    "        conv5_out = self.conv5(conv4_out)\n",
+    "        conv4_out = self.conv4(conv3_out)\n",
+    "        conv5_out = F.elu(self.conv5(conv4_out))\n",
     "        conv6_out = self.conv6(conv5_out)\n",
     "        \n",
     "        conv7_out = F.elu(self.conv7(conv6_out))\n",
     "        conv8_out = self.conv8(conv7_out)\n",
-    "        class_out = self.class_conv(conv8_out)\n",
+    "        class_out = F.elu(self.class_conv(conv8_out))\n",
     "        pool_out  = F.adaptive_avg_pool2d(class_out, 1)\n",
     "        \n",
     "        pool_out.squeeze_(-1)\n",
