Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -570,7 +570,22 @@
       "\tEpoch: 41\tTrain loss: 0.098\tTrain Acc: 96.80475\n",
       "\tEpoch: 41\tTest loss: 1.464\tTest Acc: 77.856875\n",
       "==========================\n",
-      "Epoch: 42 i : 127 and loss: 0.197 acc: 0.9453125\r"
+      "\tEpoch: 42\tTrain loss: 0.093\tTrain Acc: 96.99625\n",
+      "\tEpoch: 42\tTest loss: 1.251\tTest Acc: 79.075575\n",
+      "==========================\n",
+      "\tEpoch: 43\tTrain loss: 0.085\tTrain Acc: 97.25855\n",
+      "\tEpoch: 43\tTest loss: 1.61\tTest Acc: 77.3925755\n",
+      "==========================\n",
+      "\tEpoch: 44\tTrain loss: 0.086\tTrain Acc: 97.20225\n",
+      "\tEpoch: 44\tTest loss: 1.43\tTest Acc: 78.9158125\n",
+      "==========================\n",
+      "\tEpoch: 45\tTrain loss: 0.089\tTrain Acc: 97.13875\n",
+      "\tEpoch: 45\tTest loss: 1.278\tTest Acc: 79.275375\n",
+      "==========================\n",
+      "\tEpoch: 46\tTrain loss: 0.091\tTrain Acc: 97.10825\n",
+      "\tEpoch: 46\tTest loss: 1.408\tTest Acc: 78.235755\n",
+      "==========================\n",
+      "Epoch: 47 i : 191 and loss: 0.063 acc: 0.9765625\r"
      ]
     }
    ],
