Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -585,7 +585,19 @@
       "\tEpoch: 46\tTrain loss: 0.091\tTrain Acc: 97.10825\n",
       "\tEpoch: 46\tTest loss: 1.408\tTest Acc: 78.235755\n",
       "==========================\n",
-      "Epoch: 47 i : 191 and loss: 0.063 acc: 0.9765625\r"
+      "\tEpoch: 47\tTrain loss: 0.084\tTrain Acc: 97.35875\n",
+      "\tEpoch: 47\tTest loss: 1.59\tTest Acc: 78.5625525\n",
+      "==========================\n",
+      "\tEpoch: 48\tTrain loss: 0.077\tTrain Acc: 97.47655\n",
+      "\tEpoch: 48\tTest loss: 1.502\tTest Acc: 77.755755\n",
+      "==========================\n",
+      "\tEpoch: 49\tTrain loss: 0.075\tTrain Acc: 97.52825\n",
+      "\tEpoch: 49\tTest loss: 1.677\tTest Acc: 78.016875\n",
+      "==========================\n",
+      "\tEpoch: 50\tTrain loss: 0.084\tTrain Acc: 97.28855\n",
+      "\tEpoch: 50\tTest loss: 1.475\tTest Acc: 78.836875\n",
+      "==========================\n",
+      "\tEpoch: 51\tTrain loss: 0.082\tTrain Acc: 97.55875\n"
      ]
     }
    ],
