Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -461,7 +461,21 @@
       "\tEpoch: 1\tTrain loss: 1.339\tTrain Acc: 51.29475\n",
       "\tEpoch: 1\tTest loss: 1.175\tTest Acc: 58.486255\n",
       "==========================\n",
-      "Epoch: 2 i : 373 and loss: 0.985 acc: 0.6562555\r"
+      "\tEpoch: 2\tTrain loss: 1.053\tTrain Acc: 62.42255\n",
+      "\tEpoch: 2\tTest loss: 1.016\tTest Acc: 64.135375\n",
+      "==========================\n",
+      "\tEpoch: 3\tTrain loss: 0.891\tTrain Acc: 68.50625\n",
+      "\tEpoch: 3\tTest loss: 0.887\tTest Acc: 68.535525\n",
+      "==========================\n",
+      "\tEpoch: 4\tTrain loss: 0.78\tTrain Acc: 72.456255\n",
+      "\tEpoch: 4\tTest loss: 0.834\tTest Acc: 70.685755\n",
+      "==========================\n",
+      "\tEpoch: 5\tTrain loss: 0.703\tTrain Acc: 75.45275\n",
+      "\tEpoch: 5\tTest loss: 0.819\tTest Acc: 72.085525\n",
+      "==========================\n",
+      "\tEpoch: 6\tTrain loss: 0.632\tTrain Acc: 77.91675\n",
+      "\tEpoch: 6\tTest loss: 0.85\tTest Acc: 72.1755525\n",
+      "==========================\n"
      ]
     }
    ],
