Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -597,7 +597,21 @@
       "\tEpoch: 50\tTrain loss: 0.084\tTrain Acc: 97.28855\n",
       "\tEpoch: 50\tTest loss: 1.475\tTest Acc: 78.836875\n",
       "==========================\n",
-      "\tEpoch: 51\tTrain loss: 0.082\tTrain Acc: 97.55875\n"
+      "\tEpoch: 51\tTrain loss: 0.082\tTrain Acc: 97.55875\n",
+      "\tEpoch: 51\tTest loss: 1.477\tTest Acc: 78.353125\n",
+      "==========================\n",
+      "\tEpoch: 52\tTrain loss: 0.082\tTrain Acc: 97.40255\n",
+      "\tEpoch: 52\tTest loss: 1.674\tTest Acc: 77.565625\n",
+      "==========================\n",
+      "\tEpoch: 53\tTrain loss: 0.078\tTrain Acc: 97.55125\n",
+      "\tEpoch: 53\tTest loss: 1.618\tTest Acc: 77.125375\n",
+      "==========================\n",
+      "\tEpoch: 54\tTrain loss: 0.068\tTrain Acc: 97.81475\n",
+      "\tEpoch: 54\tTest loss: 1.616\tTest Acc: 79.075625\n",
+      "==========================\n",
+      "\tEpoch: 55\tTrain loss: 0.075\tTrain Acc: 97.56225\n",
+      "\tEpoch: 55\tTest loss: 1.644\tTest Acc: 77.695625\n",
+      "==========================\n"
      ]
     }
    ],
