Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -475,7 +475,20 @@
       "==========================\n",
       "\tEpoch: 6\tTrain loss: 0.632\tTrain Acc: 77.91675\n",
       "\tEpoch: 6\tTest loss: 0.85\tTest Acc: 72.1755525\n",
-      "==========================\n"
+      "==========================\n",
+      "\tEpoch: 7\tTrain loss: 0.567\tTrain Acc: 80.44375\n",
+      "\tEpoch: 7\tTest loss: 0.86\tTest Acc: 72.7352575\n",
+      "==========================\n",
+      "\tEpoch: 8\tTrain loss: 0.51\tTrain Acc: 82.148375\n",
+      "\tEpoch: 8\tTest loss: 0.865\tTest Acc: 72.956255\n",
+      "==========================\n",
+      "\tEpoch: 9\tTrain loss: 0.464\tTrain Acc: 83.70875\n",
+      "\tEpoch: 9\tTest loss: 0.929\tTest Acc: 71.841875\n",
+      "==========================\n",
+      "\tEpoch: 10\tTrain loss: 0.429\tTrain Acc: 84.74275\n",
+      "\tEpoch: 10\tTest loss: 0.889\tTest Acc: 72.787575\n",
+      "==========================\n",
+      "Epoch: 11 i : 113 and loss: 0.407 acc: 0.8828125\r"
      ]
     }
    ],
