Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -611,7 +611,20 @@
       "==========================\n",
       "\tEpoch: 55\tTrain loss: 0.075\tTrain Acc: 97.56225\n",
       "\tEpoch: 55\tTest loss: 1.644\tTest Acc: 77.695625\n",
-      "==========================\n"
+      "==========================\n",
+      "\tEpoch: 56\tTrain loss: 0.07\tTrain Acc: 97.834755\n",
+      "\tEpoch: 56\tTest loss: 1.528\tTest Acc: 79.325125\n",
+      "==========================\n",
+      "\tEpoch: 57\tTrain loss: 0.077\tTrain Acc: 97.56225\n",
+      "\tEpoch: 57\tTest loss: 1.545\tTest Acc: 77.995375\n",
+      "==========================\n",
+      "\tEpoch: 58\tTrain loss: 0.065\tTrain Acc: 97.91625\n",
+      "\tEpoch: 58\tTest loss: 1.562\tTest Acc: 78.145525\n",
+      "==========================\n",
+      "\tEpoch: 59\tTrain loss: 0.077\tTrain Acc: 97.60425\n",
+      "\tEpoch: 59\tTest loss: 1.669\tTest Acc: 78.575755\n",
+      "==========================\n",
+      "Epoch: 60 i : 160 and loss: 0.069 acc: 0.9687575\r"
      ]
     }
    ],
