Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T00:21:22.246Z"
+     "end_time": "2019-06-18T00:21:34.034604Z",
+     "start_time": "2019-06-18T00:21:22.247940Z"
     },
     "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# import lib\n",
     "import tensorflow as tf\n",
@@ -28,8 +37,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-05T00:21:58.390185Z",
-     "start_time": "2019-06-05T00:21:58.383145Z"
+     "end_time": "2019-06-18T00:21:34.063540Z",
+     "start_time": "2019-06-18T00:21:34.053387Z"
     },
     "code_folding": [
      1,
@@ -82,8 +91,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-05T00:21:58.454210Z",
-     "start_time": "2019-06-05T00:21:58.392180Z"
+     "end_time": "2019-06-18T00:21:34.112248Z",
+     "start_time": "2019-06-18T00:21:34.077324Z"
     },
     "code_folding": [
      47,
@@ -226,8 +235,22 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-05T00:22:08.305001Z",
-     "start_time": "2019-06-05T00:21:58.459385Z"
+     "end_time": "2019-06-18T00:21:38.540928Z",
+     "start_time": "2019-06-18T00:21:38.434322Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "! start ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-18T00:22:06.083455Z",
+     "start_time": "2019-06-18T00:21:55.703486Z"
     }
    },
    "outputs": [
@@ -242,8 +265,8 @@
    ],
    "source": [
     "# load the data\n",
-    "x_train,y_train = read_all_images('./dataset/STL10/stl10_binary/train_x.bin'),read_labels('./dataset/STL10/stl10_binary/train_y.bin')\n",
-    "x_test,y_test   = read_all_images('./dataset/STL10/stl10_binary/test_x.bin'),read_labels('./dataset/STL10/stl10_binary/test_y.bin')\n",
+    "x_train,y_train = read_all_images('../Dataset/STL10/stl10_binary/train_x.bin'),read_labels('../Dataset/STL10/stl10_binary/train_y.bin')\n",
+    "x_test,y_test   = read_all_images('../Dataset/STL10/stl10_binary/test_x.bin'),read_labels('../Dataset/STL10/stl10_binary/test_y.bin')\n",
     "\n",
     "y_train = to_categorical(y_train-1)\n",
     "y_test  = to_categorical(y_test-1)\n",
@@ -259,11 +282,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-05T00:22:08.312023Z",
-     "start_time": "2019-06-05T00:22:08.307019Z"
+     "end_time": "2019-06-18T00:22:46.648678Z",
+     "start_time": "2019-06-18T00:22:46.643691Z"
     }
    },
    "outputs": [],
