Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -390,11 +390,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-05T00:22:10.002381Z",
-     "start_time": "2019-06-05T00:22:08.934116Z"
+     "end_time": "2019-06-18T00:29:10.925077Z",
+     "start_time": "2019-06-18T00:29:09.689731Z"
     }
    },
    "outputs": [],
@@ -505,7 +505,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# see \n",
+    "temp = t"
+   ]
   }
  ],
  "metadata": {
