Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,12 +502,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-18T00:30:00.437398Z",
+     "start_time": "2019-06-18T00:30:00.412464Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.0045773513 0.051949624\n"
+     ]
+    }
+   ],
    "source": [
     "# see \n",
-    "temp = t"
+    "temp = tf.random_normal([3,3,4,5],stddev=0.05)\n",
+    "temp = temp.eval()\n",
+    "print(temp.mean(),temp.std())"
    ]
   }
  ],
