Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T00:49:04.473259Z",
-     "start_time": "2019-06-18T00:49:04.396338Z"
+     "end_time": "2019-06-18T00:51:07.706175Z",
+     "start_time": "2019-06-18T00:51:07.626847Z"
     }
    },
    "outputs": [
@@ -514,13 +514,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2.8358618e-02  2.8334666e-02 -4.7368620e-02  1.1805736e-01\n",
-      " -3.7026387e-02 -8.2218856e-02  2.0420829e-02 -3.2716183e-05\n",
-      "  3.0689150e-02 -4.6399966e-02]\n",
-      "0.035453517\n",
-      "[ 0.03  -0.008 -0.029 -0.     0.046 -0.035  0.     0.     0.     0.   ]\n",
-      "-0.016911516 0.051770806\n",
-      "0.040120326\n"
+      "[ 0.049  0.06  -0.104  0.031  0.001 -0.012  0.002 -0.095 -0.099 -0.039]\n",
+      "0.138\n",
+      "-0.117\n",
+      "0.029375264\n",
+      "[-0.019  0.035 -0.     0.     0.037  0.014  0.    -0.    -0.013  0.014]\n",
+      "-0.005424195 0.05474144\n",
+      "0.07670165\n"
      ]
     }
    ],
@@ -530,7 +530,10 @@
     "temp_abs_mean  = tf.reduce_mean(tf.abs(temp))\n",
     "temp_between1  = tf.where(-temp_abs_mean<=temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp<=temp_abs_mean,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
     "\n",
-    "print(temp.eval())\n",
+    "print(np.around(temp.eval(),3))\n",
+    "print(np.around(temp.eval(),3).max())\n",
+    "print(np.around(temp.eval(),3).min())\n",
+    "\n",
     "print(temp_abs_mean.eval())\n",
     "print(np.around(temp_between1.eval(),3))\n",
     "\n",
