--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T00:51:07.706175Z",
-     "start_time": "2019-06-18T00:51:07.626847Z"
+     "end_time": "2019-06-18T00:53:14.598955Z",
+     "start_time": "2019-06-18T00:53:14.530629Z"
     }
    },
    "outputs": [
@@ -514,21 +514,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.049  0.06  -0.104  0.031  0.001 -0.012  0.002 -0.095 -0.099 -0.039]\n",
-      "0.138\n",
-      "-0.117\n",
-      "0.029375264\n",
-      "[-0.019  0.035 -0.     0.     0.037  0.014  0.    -0.    -0.013  0.014]\n",
-      "-0.005424195 0.05474144\n",
-      "0.07670165\n"
+      "[-0.049  0.067 -0.029  0.081  0.028  0.015  0.019 -0.002 -0.027  0.027]\n",
+      "0.078\n",
+      "-0.016\n",
+      "0.033807512\n",
+      "[0. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
      ]
     }
    ],
    "source": [
     "# see \n",
-    "temp = tf.random_normal([10],stddev=0.05)\n",
+    "temp = tf.random_normal([10],stddev=0.05,seed=4)\n",
     "temp_abs_mean  = tf.reduce_mean(tf.abs(temp))\n",
-    "temp_between1  = tf.where(-temp_abs_mean<=temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp<=temp_abs_mean,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
+    "temp_between1  = tf.where(-temp_abs_mean<=temp,tf.ones_like(temp),tf.zeros_like(temp))  \n",
     "\n",
     "print(np.around(temp.eval(),3))\n",
     "print(np.around(temp.eval(),3).max())\n",
@@ -537,10 +535,10 @@
     "print(temp_abs_mean.eval())\n",
     "print(np.around(temp_between1.eval(),3))\n",
     "\n",
-    "temp = temp.eval()\n",
-    "temp_abs_mean = temp_abs_mean.eval()\n",
-    "print(temp.mean(),temp.std())\n",
-    "print(temp_abs_mean)\n",
+    "# temp = temp.eval()\n",
+    "# temp_abs_mean = temp_abs_mean.eval()\n",
+    "# print(temp.mean(),temp.std())\n",
+    "# print(temp_abs_mean)\n",
     "\n",
     "# plt.hist(temp.flatten(),bins=50); plt.show()\n"
    ]
